# EvoClawBench

./: .gitignore  AGENTS.md  README.md  claude_api.md  export_openai_api.sh  proxy.py
evoclawbench/: CLAUDE.md  Dockerfile  QuickStart.md  README.md  README_CN.md  SKILL.md  TODO.md  pyproject.toml
evoclawbench/docs/: evolution_ab_test.md
evoclawbench/outputs/: case_01_report.json  case_02_report.json  case_03_report.json  case_04_report.json  case_05_report.json
evoclawbench/scripts/: .clawhub_state.json  .clawhub_state_validate.json  README_clawhub_crawler.md  analyze_cost_and_amortization.py  analyze_judge_robustness.py  benchmark.py  benchmark_progress.py  clawhub_skill_crawler.py  harden_generated_tasks.py  lib_agent.py  lib_bench_report.py  lib_environment.py  lib_grading.py  lib_metrics.py  lib_model_pricing.py  lib_tasks.py  lib_trajectory.py  plot_suite_distribution.py  run_ablation_subset.py  skills.json  skills_highlighted.json  test_llm_judge_integration.py
evoclawbench/tasks/: TASK_TEMPLATE.md  task_00_sanity.md  task_01_batch_data_transform.md  task_02_log_analysis.md  task_03_api_scaffold.md  task_04_test_generation.md  task_05_config_migration.md  task_06_code_review.md  task_07_doc_extraction.md  task_08_schema_ops.md  task_09_excel_analytics.md  task_100_inbox_rules_classification.md  task_10_git_history_analysis.md  task_11_web_extraction.md  task_12_docx_generation.md  task_13_data_pipeline.md  task_14_email_processing.md  task_15_shell_automation.md  task_16_ci_pipeline.md  task_17_invoice_processing.md  task_18_dep_audit.md  (+81 more)
(+563 files in other folders)
