[project]
name = "evoclawbench"
version = "0.1.0"
description = "EvoClawBench - Benchmark for evaluating LLM agent skill evolution capabilities"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "rich>=13.7",
    "pyyaml>=6.0.1",
    "openai>=1.0",
    "openpyxl>=3.1",
    "python-docx>=1.1",
    "beautifulsoup4>=4.12",
    "pandas>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.4.0",
    "black>=24.0",
]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
